--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
     font-family: 'Merriweather', serif;
 }
 .btn{
-    animated: slideInLeft;
     width:200px;
     background-color: #bf0a30;
     color:white;
@@ -21,10 +20,17 @@ body{
 }
 .question{
     color:white;
+    margin: 4px;
 }
 .questions{
+    animation: fadeIn;
+    animation-duration:2s;
     font-size: 26px;
     height:100px;
+}
+.answers{
+    animation:fadeIn;
+    animation-duration:2s;
 }
 .btn:hover{
     background-color:white;
